# nes

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt-e  CTestTestfile.cmake  Makefile  README.md  cmake_install.cmake  nes  tags  test_instructions  test_utils
include/: cpu.h  instruction_set.h  mem.h  utils.h
src/cpu/: .cpu.c.swp  .instruction_set.c.swp  cpu.c  instruction_set.c
src/cpu/test/: test.cpp
src/mem/: mem.c
src/utils/: utils.c
src/utils/test/: test.cpp
